# hackerrank-hw

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/hw1/: task_1.rs  task_2.rs  task_3.rs
src/hw2/: task_1.rs  task_2.rs  task_3.rs
src/hw3/: task_1.rs
src/hw4/: task_1.rs  task_2.rs
src/test/: mod.rs
src/test/homeworks/hw1/: mod.rs  task_1.rs  task_2.rs  task_3.rs  tests.rs
src/utils/: gcd.rs  input.rs  lcm.rs  mod.rs
