[package]
name = "hackerrank"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"

[features]
# ---------------------------------------------------------------------------- #
#                                   All Test                                   #
# ---------------------------------------------------------------------------- #

all-tests = []

################################################################################
# Homework 1
################################################################################

# ---------------------------------------------------------------------------- #
#                                     Test                                     #
# ---------------------------------------------------------------------------- #

# Tests
hw1-test-1 = []
hw1-test-2 = []
hw1-test-3 = []

# All tests runner
hw1-test = ["hw1-test-1", "hw1-test-2", "hw1-test-3"]

# ---------------------------------------------------------------------------- #
#                                     Task                                     #
# ---------------------------------------------------------------------------- #

# Tasks
hw1-task-1 = []
hw1-task-2 = []
hw1-task-3 = []

# All tasks runner
hw1 = ["hw1-task-1", "hw1-task-2", "hw1-task-3"]

# ---------------------------------------------------------------------------- #
