[package]
name = "hackerrank"
version = "0.1.0"
edition = "2021"

[dependencies]
katexit = "0.1.4"
num-traits = "0.2.19"

[features]
# ---
# Homework 1
# ---
hw1-task-1 = []
hw1-task-2 = []
hw1-task-3 = []
# ---
# Homework 2
# ---
hw2-task-1 = []
hw2-task-2 = []
hw2-task-3 = []
# ---
# Homework 3
# ---
hw3-task-1 = []
# ---
# Homework 4
# ---
hw4-task-1 = []
hw4-task-2 = []
